各モデルの編集機能を追加

--- a/app/views/bbs_threads/show.html.erb
+++ b/app/views/bbs_threads/show.html.erb
@@ -18,7 +18,7 @@
           <tr>
             <td>
               <div>
-                <%= response.id %>：<a href="mailto:<%= response.mail %>"><%= response.name %></a> <%= response.info %>
+                <%= response.id %>：<%= response.name %> [mail: <%= response.mail %>] <%= response.info %>
               </div>
               <div>
                 <%= response.body %>
