--- a/app/views/board_manager/index.html.erb
+++ b/app/views/board_manager/index.html.erb
@@ -1,4 +1,13 @@
 <div class="container-fluid">
+
+  <!-- ぱんくず {{{ -->
+  <div class="row-fluid">
+    <ul class="breadcrumb">
+      <li>板一覧</li>
+    </ul>
+  </div>
+  <!-- }}} -->
+
   <div class="row-fluid">
 
     <!-- 板一覧 {{{ -->
