--- a/app/views/bbs_threads/edit.html.erb
+++ b/app/views/bbs_threads/edit.html.erb
@@ -1,4 +1,16 @@
 <div class="container-fluid">
+
+  <!-- ぱんくず {{{ -->
+  <div class="row-fluid">
+    <ul class="breadcrumb">
+      <li><%= link_to '板一覧', board_manager_index_path %> <span class="divider">/</span></li>
+      <li><%= link_to @bbs_thread.bbs_board.screen_name, bbs_board_path(@bbs_thread.bbs_board) %> <span class="divider">/</span></li>
+      <li><%= link_to @bbs_thread.screen_name, bbs_thread_path(@bbs_thread) %> <span class="divider">/</span></li>
+      <li>編集画面</li>
+    </ul>
+  </div>
+  <!-- }}} -->
+
   <div class="row-fluid">
     <table class="table table-bordered">
       <thead>
