--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,7 +33,8 @@
           <div class="well sidebar-nav">
             <h3>Menu</h3>
             <ul class="nav nav-list">
-              <li><%= link_to "板の管理", "/board_manager"  %></li>
+              <li><%= link_to 'ホーム', '/' %></li>
+              <li><%= link_to '板の管理', '/board_manager' %></li>
             </ul>
           </div><!--/.well -->
           <!-- }}} -->
