フォームの横にあるメッセージを修正

--- a/app/views/bbs_boards/show.html.erb
+++ b/app/views/bbs_boards/show.html.erb
@@ -41,11 +41,28 @@
 
   <div class="row-fluid">
     <div class="span6">
+      <!-- フォームの項目について {{{ -->
       <div class="well">
-        てすと
+        <h2>フォームの項目について</h2>
+        <table class="table table-bordered">
+          <thead>
+            <tr>
+              <th>項目</th>
+              <th>項目の説明</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Screen Name</td>
+              <td>表示名</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
+      <!-- }}} -->
     </div>
     <div class="span6">
+      <!-- フォーム {{{ -->
       <table class="table table-bordered">
         <thead>
           <tr>
@@ -72,6 +89,7 @@
           <% end %>
         </tbody>
       </table>
+      <!-- }}} -->
     </div>
   </div>
 
