--- a/app/views/board_manager/index.html.erb
+++ b/app/views/board_manager/index.html.erb
@@ -43,11 +43,31 @@
   </div>
 
   <div class="row-fluid">
-
+    <!-- 項目の説明 {{{ -->
     <div class="span6">
       <div class="well">
+        <h2>フォームの項目について</h2>
+        <table class="table table-bordered">
+          <thead>
+            <tr>
+              <th>項目</th>
+              <th>項目の説明</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Key</td>
+              <td>板のキー, URLで使用します</td>
+            </tr>
+            <tr>
+              <td>Screen Name</td>
+              <td>表示名</td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
+    <!-- }}} -->
 
     <!-- 新しい板を作成する {{{ -->
     <div class="span6">
